# gd-spout

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
gd-spout/: Cargo.toml
gd-spout/src/: d3d12_util.rs  lib.rs  sender.rs  spout.rs
gd-spout/src/node/: mod.rs  sender.rs
gd-spout/src/resource/: mod.rs  receiver.rs
gd-spout/src/spout/: d3d12_util.rs  dx12.rs  no_op.rs  receiver.rs  sender.rs
gd-spout/src/spout/dx12/: fence.rs  godot.rs  receiver.rs  sender.rs  spout.rs
gd-spout/src/spout/receiver/: dx12.rs  no_op.rs
gd-spout/src/spout/sender/: dx12.rs  no_op.rs
gd-spout/src/spout/sender/dx12/: spout_sender_manager.rs
project/addons/gd-spout/: gd-spout.gdextension
spout-sys/: CMakeLists.txt  Cargo.toml  build.rs
spout-sys/include/: spout.h
spout-sys/src/: lib.rs  spout.cpp  spout.rs
