[package]
name = "gd-spout"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", version = "0.3.5" }
spout-sys = { path = "../spout-sys" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Graphics_Direct3D12", "Win32_System_Threading", "Win32_Security"] }
